feat : 오탈자, 문법오류 수정

--- a/BankingSystem/커밋 기록.md
+++ b/BankingSystem/커밋 기록.md
@@ -32,3 +32,23 @@ AccountHandler {
 > 2. 메뉴 관련 함수들을 **클래스 멤버 함수**로 이동 -> 관리 일원화
 
 - 단순히 코드 구조를 객체지향적으로 바꾸는 과정
+
+---
+# 🗓️2025-08-20 커밋 기록
+## 다형성 구현 - 코드 리팩토링
+기존은 Account클래스만 존재했었다.(코드 다형성x)
+- Account클래스를 상속하는 NormalAccount, HighCreditAccount를 추가!
+### 재사용 측면
+- 자식/자손 클래스가 부모 클래스의 멤버 함수를 그대로 호출한다.
+    - `Account::Deposit(money))`해서 기존 기능 재사용
+    - 추가 기능만 덧붙이는 형태로 코드 중복을 최소화한다.
+### 업케스팅
+- 부모 클래스 포인터 `Account*`로 자식/자손 객체를 가리키고</br>
+가상 함수를 호출할 때 실제 객체 타입에 맞는 함수가 **런타임**에 선택된다.
+
+## 알아둘 점
+### virtual
+- 가상함수 `virtual`은 부모 클래스의 멤버함수에만 붙여주면 
+**손자까지 계속 가상 함수 속성이 이어진다.**
+    - 자식함수에 `override`키워드 붙이는거 반드시 습관화하자
+- 헤더에서 `virtual` 붙이면 구현부에서는 안붙여도 된다.
