gitignore수정 및 객체지향프로그래밍 4주차 문제

--- a/BankingSystem/커밋 기록.md
+++ b/BankingSystem/커밋 기록.md
@@ -52,3 +52,9 @@ AccountHandler {
 **손자까지 계속 가상 함수 속성이 이어진다.**
     - 자식함수에 `override`키워드 붙이는거 반드시 습관화하자
 - 헤더에서 `virtual` 붙이면 구현부에서는 안붙여도 된다.
+
+--- 
+# 🗓️2025-08-21 커밋 기록
+## 클래스별 헤더/구현파일 분리
+- 실무나 확장 프로젝트에서는 클래스별 파일로 나누는 것이 표준이다.
+- 공통 상수나 enum 은 별도의 헤더를 사용한다.
